$Id$

2009-01-20 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.5.2 released.
  - fix minor notice errors
  - implement Mock Object (PHPUnit feature) to replace call to W3C CSS Validator Web Service
  - add many new unit test cases to improve code coverage from 77 to 96%

2008-03-15 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.5.1 released.
  - fixed bug #12996 : Call-time pass-by-reference has been deprecated
  - fixed bug #13314 : Notice error raised on parsing string

2008-01-15 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.5.0 released.
  - implement request#12194 : support of At-Rules
  - add new function getOptions() to retrieve easily all configuration options at once
  - add new function validate() to check data source with the W3C CSS validator service
    see file examples/CSS_validate.php

2007-12-14 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.4.0 released.
  - removed old class (private) properties related to options ($_xhtmlCompliant,
    $_cache, $_singleLine, $_charset, $_contentDisposition, $_groupsFirst,
    $_allowDuplicates), now group by in a private array $options.
  - added class constructor (ZE2) for PHP5.
  - Error handler allow now to use PEAR_ERROR_CALLBACK to customize action
    (log yes/no, print yes/no) when an error/exception is raised.
  - remove trailing EOL in toString() output (with oneline option set to true)
  - tests suite migrated from PHPUnit 1.x to 3.x

2007-10-22 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.3.0 released.
  - prevent invalide CSS data source in to parse
  - add Content-Disposition to the headers in display(); request#12195
  - remove pointless NEWS file from distribution

2007-06-12 Laurent Laville <pear@laurent-laville.org>

  * VERSION: Final version (stable) 1.2.0 released.
  - No code changes since previous version
