@@ -37,14 +37,12 @@ $p2 = &PEAR_PackageFileManager2::importOptions($packagefile, $options);
 $p2->setPackageType('php');
 $p2->addRelease();
 $p2->generateContents();
-$p2->setReleaseVersion('1.5.2');
+$p2->setReleaseVersion('1.5.3');
 $p2->setAPIVersion('1.5.0');
 $p2->setReleaseStability('stable');
 $p2->setAPIStability('stable');
 $p2->setNotes('* QA
-- fix minor notice errors
-- implement Mock Object (PHPUnit feature) to replace call to W3C CSS Validator Web Service
-- add many new unit test cases to improve code coverage from 77 to 96%
+- prevent wrong usage of setSameStyle(); see bug #15690
 ');
 //$p2->setLicense('BSD', 'http://www.opensource.org/licenses/bsd-license.php');
 //$p2->setPhpDep('4.3.0');
